# personal-studies

./: mkdocs.yml  pyproject.toml  readme.md
docs/: index.md
docs_src/: sample.py
